# fencechecker

./: .editorconfig  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  TEST.md  demo.cast  pyproject.toml
src/fencechecker/: __init__.py  config.py  file.py  main.py  models.py  types.py  venv.py
tests/fixtures/: lorem-ipsum.md
