[project]
name = "fencechecker"
version = "0.1.0"
description = "A CLI app that will execute any fenced code blocks of Python in Markdown files to ensure they don't raise any errors."
readme = "README.md"
authors = [
    { name = "James Benner", email = "james.benner@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "markdown-analysis>=0.1.5",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
fencechecker = "fencechecker.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
